@@ -10,12 +10,12 @@ import java.util.stream.Stream;
 import static java.util.Arrays.stream;
 import static java.util.stream.Stream.concat;
 
-class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
+class InjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
     private Constructor<T> injectConstructor;
     private List<Field> injectFields;
     private List<Method> injectMethods;
 
-    public ConstructorInjectionProvider(Class<T> component) {
+    public InjectionProvider(Class<T> component) {
         if (Modifier.isAbstract(component.getModifiers())) throw new IllegalComponentException();
         this.injectConstructor = getInjectConstructor(component);
         this.injectFields = getInjectFields(component);
@@ -26,29 +26,22 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
             throw new IllegalComponentException();
     }
 
-
     @Override
     public T get(Context context) {
         try {
-            Object[] dependencies = stream(injectConstructor.getParameters())
-                    .map(p -> {
-                        Class<?> type = p.getType();
-                        return context.get(type).get();
-                    })
-                    .toArray(Object[]::new);
-            T instance = injectConstructor.newInstance(dependencies);
+            T instance = injectConstructor.newInstance(toDependencies(context, injectConstructor));
             for (Field field : injectFields) {
-                field.set(instance, context.get(field.getType()).get());
+                field.set(instance, toDependency(context, field));
             }
             for (Method method : injectMethods) {
-                method.invoke(instance, stream(method.getParameterTypes()).map(t -> context.get(t).get())
-                        .toArray(Object[]::new));
+                method.invoke(instance, toDependencies(context, method));
             }
             return instance;
         } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
             throw new RuntimeException(e);
         }
     }
+
 
     @Override
     public List<Class<?>> getDependencies() {
@@ -64,42 +57,65 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
         List<Method> injectMethods = new ArrayList<>();
         Class<?> current = component;
         while (current != Object.class) {
-            injectMethods.addAll(stream(current.getDeclaredMethods())
-                    .filter(method -> method.isAnnotationPresent(Inject.class))
-                    .filter(m -> injectMethods.stream().noneMatch(o -> o.getName().equals(m.getName()) &&
-                            Arrays.equals(o.getParameters(), m.getParameters())))
-                    .filter(m -> stream(component.getDeclaredMethods()).filter(m1 -> !m1.isAnnotationPresent(Inject.class)).noneMatch(o -> o.getName().equals(m.getName()) &&
-                            Arrays.equals(o.getParameters(), m.getParameters())))
-                    .collect(Collectors.toList()));
+            injectMethods.addAll(injectable(current.getDeclaredMethods())
+                    .filter(m -> isOverrideByInjectMethod(injectMethods, m))
+                    .filter(m -> isOverrideByNonInjectMethod(component, m))
+                    .toList());
             current = current.getSuperclass();
         }
         Collections.reverse(injectMethods);
         return injectMethods;
     }
 
+    private static <T> boolean isOverrideByNonInjectMethod(Class<T> component, Method m) {
+        return stream(component.getDeclaredMethods()).filter(m1 -> !m1.isAnnotationPresent(Inject.class)).noneMatch(o -> isOverride(m, o));
+    }
+
+    private static boolean isOverrideByInjectMethod(List<Method> injectMethods, Method m) {
+        return injectMethods.stream().noneMatch(o -> isOverride(m, o));
+    }
+
+
     private static <T> List<Field> getInjectFields(Class<T> component) {
         List<Field> injectFields = new ArrayList<>();
         Class<?> current = component;
         while (current != Object.class) {
-            injectFields.addAll(stream(current.getDeclaredFields())
-                    .filter(field -> field.isAnnotationPresent(Inject.class))
-                    .collect(Collectors.toList()));
+            injectFields.addAll(injectable(current.getDeclaredFields()).
+                    toList());
             current = current.getSuperclass();
         }
         return injectFields;
     }
 
+
     private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
-        List<Constructor<?>> injectConstructors = stream(implementation.getConstructors())
-                .filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+        List<Constructor<?>> injectConstructors = injectable(implementation.getConstructors()).toList();
         if (injectConstructors.size() > 1) throw new IllegalComponentException();
-        return (Constructor<Type>) injectConstructors.stream()
-                .findFirst().orElseGet(() -> {
-                    try {
-                        return implementation.getDeclaredConstructor();
-                    } catch (Exception e) {
-                        throw new IllegalComponentException();
-                    }
-                });
+        return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> defaultConstructor(implementation));
+    }
+
+    private static <Type> Constructor<Type> defaultConstructor(Class<Type> implementation) {
+        try {
+            return implementation.getDeclaredConstructor();
+        } catch (Exception e) {
+            throw new IllegalComponentException();
+        }
+    }
+
+    private static <T extends AnnotatedElement> Stream<T> injectable(T[] declaredFields) {
+        return stream(declaredFields)
+                .filter(f -> f.isAnnotationPresent(Inject.class));
+    }
+
+    private static boolean isOverride(Method m, Method o) {
+        return o.getName().equals(m.getName()) && Arrays.equals(o.getParameters(), m.getParameters());
+    }
+
+    private static Object[] toDependencies(Context context, Executable executable) {
+        return stream(executable.getParameterTypes()).map(t -> context.get(t).get()).toArray(Object[]::new);
+    }
+
+    private static Object toDependency(Context context, Field field) {
+        return context.get(field.getType()).get();
     }
 }
